# ec2_resource_monitoring

./: Cargo.toml
src/: main.rs
