[package]
name    = "list_servers"
version = "0.1.0"
authors = ["alexwhite"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46.0"
rusoto_ec2  = "0.46.0"
serde_json  = "1.0.59"
serde       = { version = "1.0", features = ["derive"] }
futures     = "0.3.12"
tokio       = { version = "1", features = ["full"] }